@@ -4,6 +4,8 @@
 
 Version 1.4.19 - SVN
 --------------------
+  - Removed use of session_unregister() for compatibility with PHP 5.3.0
+    and PHP 6
 
 Version 1.4.18 - 11 May 2009
 ----------------------------
